# hexlet-trials

./: .dependencies_log  Makefile  README.md  pyproject.toml  setup.cfg
lessons_codes/: 2_2_functions.py  ch2_2_functions.py  ch2_4_autotests.py
lessons_codes/tests/: ch2_4_autotests_tests.py  test_ch2_4.py
