[tool.poetry]
name = "hexlet-trials"
version = "0.1.0"
description = ""
authors = ["Evgeny Sokolov <sokolovsolod@gmail.com>"]
readme = "README.md"
packages = [
{include = "lesson-codes"},
]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
