[tool.poetry]
name = "hexlet-trials"
version = "0.2.1"
description = ""
authors = ["Evgeny Sokolov <sokolovsolod@gmail.com>"]
readme = "README.md"
packages = [
{include = "lessons_codes"},
]


[tool.poetry.scripts]
ch2_4_test = "lessons_codes.tests.test_ch2_4:main"


[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pytest = "^7.3.1"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
